--- a/arch/arm/boot/dts/qcom/msm-pmi8994.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8994.dtsi
@@ -321,8 +321,8 @@
 			status = "okay";
 			qcom,bcl-lm-threshold-ma = <127>;
 			qcom,bcl-mh-threshold-ma = <405>;
-			qcom,fg-iterm-ma = <320>;
-			qcom,fg-chg-iterm-ma = <100>;
+			qcom,fg-iterm-ma = <220>;
+			qcom,fg-chg-iterm-ma = <150>;
             qcom,fg-delta-soc = <1>;
 			qcom,cycle-counter-en;
 			qcom,capacity-learning-on;
@@ -330,14 +330,15 @@
             qcom,cl-max-start-soc = <30>;
             qcom,fg-soc-max = <100>;
             qcom,fg-soc-min = <0>;
-            qcom,fg-vbatt-low-threshold = <3150>;
-            qcom,fg-cutoff-voltage-mv = <3100>;
-			qcom,fg-cc-cv-threshold-mv = <4390>;
+            qcom,fg-vbatt-low-threshold = <3050>;
+            qcom,fg-cutoff-voltage-mv = <3000>;
+			qcom,fg-cc-cv-threshold-mv = <4395>;
 			qcom,pmic-revid = <&pmi8994_revid>;
 			qcom,ext-sense-type;
-			qcom,cold-bat-decidegc = <0x0>;
-			qcom,cool-bat-decidegc = <0x96>;
-			qcom,hot-bat-decidegc = <0x1f4>;
+			qcom,cold-bat-decidegc = <0>;
+			qcom,cool-bat-decidegc = <150>;
+			qcom,warm-bat-decidegc = <450>;
+			qcom,hot-bat-decidegc = <550>;
 /*
 			qcom,resume-soc = <95>;
 			status = "okay";
