--- a/arch/arm/boot/dts/qcom/msm8996-le_x2-dvt1.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-le_x2-dvt1.dtsi
@@ -409,18 +409,35 @@
 };
 
 &pmi8994_charger {
-	qcom,float-voltage-mv = <4400>;
-	qcom,fastchg-current-ma = <4500>;
-	qcom,thermal-mitigation = <4500 3800 3000 1000 500>;
-	qcom,usb-thermal-mitigation = <3000 2000 1000 0>;
-	qcom,fastchg-current-comp = <1200>;
-	qcom,float-voltage-comp = <16>;
+					qcom,iterm-ma = <160>;
+					qcom,fastchg-current-ma = <4500>;
+					qcom,float-voltage-mv = <4400>;
+					qcom,resume-delta-mv = <200>;
+					qcom,chg-inhibit-fg;
+					qcom,dc-psy-type = "Wipower";
+					qcom,dc-psy-ma = <1500>;
+					qcom,rparasitic-uohm = <100000>;
+					qcom,bms-psy-name = "bms";
+					qcom,thermal-mitigation = <4500 3800 3000 1000 500>;
+					qcom,parallel-usb-min-current-ma = <1400>;
+					qcom,parallel-usb-9v-min-current-ma = <900>;
+					qcom,parallel-allowed-lowering-ma = <500>;
+					qcom,autoadjust-vfloat;
+					qcom,force-aicl-rerun;
+					qcom,aicl-rerun-period-s = <180>;
+					qcom,wipower-default-ilim-map = <4000000 20000000 550 700 300>;
+					qcom,wipower-pt-ilim-map = <4000000 7140000 550 700 300 7140000 8140000 550 700 300 8140000 9140000 500 700 300 9140000 9950000 500 700 300>;
+					qcom,wipower-div2-ilim-map = <4000000 4820000 550 700 300 4820000 5820000 550 700 300 5820000 6820000 550 650 650 6820000 7820000 550 700 600 7820000 8500000 550 700 550>;
+					qcom,usb-thermal-mitigation = <3000 2000 1000 0>;
+					qcom,fastchg-current-comp = <1200>;
+					qcom,float-voltage-comp = <16>;
 };
 
 &pmi8994_fg {
 	qcom,cold-bat-decidegc = <0>;
 	qcom,cool-bat-decidegc = <150>;
-	qcom,hot-bat-decidegc = <500>;
+	qcom,warm-bat-decidegc = <450>;
+	qcom,hot-bat-decidegc = <550>;
 };
 
 &uartblsp2dm1 {
