cpu-boost: Pull in Modified version for EAS
Change-Id: If2c69e45af09bc4e032474d0eee12a6d5eca141c
Signed-off-by: RenderBroken <zkennedy87@gmail.com>
Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -1,3 +1,4 @@
+
 menu "CPU Frequency scaling"
 
 config CPU_FREQ
@@ -281,6 +282,18 @@ config CPU_FREQ_GOV_PWRUTILX
 	  If in doubt, say N.
 
 comment "CPU frequency scaling drivers"
+
+config CPU_BOOST
+	tristate "Event base short term CPU freq boost"
+	default y
+	depends on CPU_FREQ
+	help
+	  This driver boosts the frequency of one or more CPUs based on
+	  various events that might occur in the system. As of now, the
+	  events it reacts to are:
+	  - Migration of important threads from one CPU to another.
+
+	  If in doubt, say N.
 
 config CPUFREQ_DT
 	tristate "Generic DT based cpufreq driver"
