spi bial-pull-up as in 19s

--- a/arch/arm/boot/dts/qcom/msm8996-pinctrl.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-pinctrl.dtsi
@@ -1081,7 +1081,7 @@
 					pins = "gpio0", "gpio1",
 						"gpio2", "gpio3";
 					drive-strength = <6>;
-					bias-disable;
+					bias-pull-up;
 				};
 			};
 
@@ -1096,7 +1096,7 @@
 					pins = "gpio0", "gpio1",
 						"gpio2", "gpio3";
 					drive-strength = <6>;
-					bias-disable;
+					bias-pull-up;
 				};
 			};
 		};
