--- a/drivers/input/goodixfp/Makefile
+++ b/drivers/input/goodixfp/Makefile
@@ -1,5 +1,7 @@
 MODULE_NAME := gf
-obj-$(CONFIG_INPUT_GP5XX8) := $(MODULE_NAME).o
+obj-$(CONFIG_INPUT_GP5xx8) := $(MODULE_NAME).o
 
 $(MODULE_NAME)-objs := gf_spi.o \
                        platform.o \
+
+
