--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -775,18 +775,12 @@ config INPUT_DRV2667_HAPTICS
 	  Say Y to enable support for the TI DRV2667 haptics driver.
 
 	  To compile this driver as a module, choose M here: the
-	  module will be called drv2667-haptics.
+	  module will be called drv260x-haptics.
 
-config INPUT_DRV2604L_HAPTICS
-	tristate "TI DRV2604L haptics support"
-	depends on INPUT && I2C && GPIOLIB
-	select INPUT_FF_MEMLESS
-	select REGMAP_I2C
+config INPUT_NXU810
+	tristate "NXU810 support"
 	help
-	  Say Y to enable support for the TI DRV2604L haptics driver.
-
-	  To compile this driver as a module, choose M here: the
-	  module will be called drv2604l-haptics.
+	  Letv addon
 
 source "drivers/input/misc/ots_pat9125/Kconfig"
 
