--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -12,7 +12,7 @@ menuconfig INPUT_TOUCHSCREEN
 if INPUT_TOUCHSCREEN
 
 source "drivers/input/touchscreen/synaptics_dsx/Kconfig"
-source "drivers/input/touchscreen/synaptics_dsx_2.6/Kconfig"
+#source "drivers/input/touchscreen/synaptics_dsx_2.6/Kconfig"
 source "drivers/input/touchscreen/synaptics_dsx_letv/Kconfig"
 source "drivers/input/touchscreen/hideep_letv/Kconfig"
 
@@ -109,7 +109,7 @@ config TOUCHSCREEN_AR1021_I2C
 
 config TOUCHSCREEN_ATMEL_MXT
 	tristate "Atmel mXT I2C Touchscreen"
-	depends on I2C && !MACH_LEECO
+	depends on I2C
 	select FW_LOADER
 	help
 	  Say Y here if you have Atmel mXT series I2C touchscreen,
@@ -120,20 +120,8 @@ config TOUCHSCREEN_ATMEL_MXT
 	  To compile this driver as a module, choose M here: the
 	  module will be called atmel_mxt_ts.
 
-config TOUCHSCREEN_ATMEL_MAXTOUCH_TS
-	tristate "Atmel Maxtouch Touchscreen Family"
-	depends on I2C && !MACH_LEECO
-	help
-	  Say Y here if you have Atmel MaXTouch Touchscreen
-	  using i2c connected to your system.
-
-	  If unsure, say N.
-
-	  To compile this driver as a module, choose M here: the
-	  module will be called atmel_maxtouch_ts.
-
 config TOUCHSCREEN_ATMEL_MXT_LETV
-	tristate "Atmel mXT I2C Touchscreen for the LeTV platform"
+	tristate "Atmel mXT I2C Touchscreen at letv platform"
 	depends on I2C
 	help
 	  Say Y here if you have Atmel mXT series I2C touchscreen,
@@ -143,6 +131,18 @@ config TOUCHSCREEN_ATMEL_MXT_LETV
 
 	  To compile this driver as a module, choose M here: the
 	  module will be called atmel_mxt_ts_letv.
+
+config TOUCHSCREEN_ATMEL_MAXTOUCH_TS
+	tristate "Atmel Maxtouch Touchscreen Family"
+	depends on I2C
+	help
+	  Say Y here if you have Atmel MaXTouch Touchscreen
+	  using i2c connected to your system.
+
+	  If unsure, say N.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called atmel_maxtouch_ts.
 
 config TOUCHSCREEN_AUO_PIXCIR
 	tristate "AUO in-cell touchscreen using Pixcir ICs"
@@ -1022,8 +1022,9 @@ config TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_EXTRA_SYSFS
 config SECURE_TOUCH
 	bool "Secure Touch"
 	depends on (TOUCHSCREEN_SYNAPTICS_I2C_RMI4 || \
-	  TOUCHSCREEN_SYNAPTICS_DSX_I2C_v21 || TOUCHSCREEN_SYNAPTICS_DSX_I2C_LETV || \
-	  TOUCHSCREEN_ATMEL_MXT || TOUCHSCREEN_ATMEL_MAXTOUCH_TS)
+	  TOUCHSCREEN_SYNAPTICS_DSX_I2C_v21 || TOUCHSCREEN_ATMEL_MXT || \
+	  TOUCHSCREEN_SYNAPTICS_DSX_I2C_V26 || TOUCHSCREEN_ATMEL_MXT_LETV || \
+	  TOUCHSCREEN_ATMEL_MAXTOUCH_TS)
 	help
 	  Say Y here to enable Secure Touch in supported drivers.
 
@@ -1063,26 +1064,17 @@ config TOUCHSCREEN_GEN_VKEYS
          module will be called gen_vkeys.
 
 config TOUCHSCREEN_FT5X06
-	tristate "FocalTech I2C Touchscreen"
-	depends on I2C
-	help
-	  Say Y here if you have a ft5X06 touchscreen.
-	  Ft5x06 controllers are multi touch controllers which can
-	  report 5 touches at a time.
+       tristate "FocalTech touchscreens"
+       depends on I2C
+       help
+         Say Y here if you have a ft5X06 touchscreen.
+	 Ft5x06 controllers are multi touch controllers which can
+	 report 5 touches at a time.
 
-	  If unsure, say N.
+         If unsure, say N.
 
-	  To compile this driver as a module, choose M here: the
-	  module will be called ft5x06_ts.
-
-config TOUCHSCREEN_FTS
-	bool "FocalTech I2C Touchscreen (LeTV)"
-	depends on I2C
-	help
-	  Say Y here if you have a Focaltech I2C touchscreen
-	  connected to your LeEco/LeTV device.
-
-	  If unsure, say N.
+         To compile this driver as a module, choose M here: the
+         module will be called ft5x06_ts.
 
 config FT_SECURE_TOUCH
 	bool "Secure Touch support for Focaltech Touchscreen"
@@ -1146,6 +1138,14 @@ config TOUCHSCREEN_GT9XX
 
           If unsure, say N.
 
+config TOUCHSCREEN_FTS
+	bool "focaltech touchpanel"
+	depends on I2C
+	help
+		Say Y here if you have a Focaltech touchscreen.
+
+		If unsure, say N.
+
 config TOUCHSCREEN_MAXIM_STI
 	tristate "Maxim based STI touchscreens"
 	depends on SPI_MASTER
@@ -1159,12 +1159,15 @@ config TOUCHSCREEN_MAXIM_STI
 	  module will be called maxim_sti.
 
 config LETVS_CLASS
-	bool "LeTV device register"
-	help
-	  Say Y here if you have a LeTV device to register for a
-	  certain driver.
+       bool "letv class  for Mediatek package"
+       default n
+       help
+         Say Y here if you have letv class.
 
-	  If unsure, say N.
+         If unsure, say N.
+
+         To compile this dirver as a module, choose M here: the
+	 module will be called.
 
 source "drivers/input/touchscreen/gt9xx/Kconfig"
 
