--- a/drivers/input/touchscreen/synaptics_dsx_letv/Kconfig
+++ b/drivers/input/touchscreen/synaptics_dsx_letv/Kconfig
@@ -1,32 +1,33 @@
 #
-# Synaptics DSX v2.6 touchscreen driver configuration
+# Synaptics DSX touchscreen driver configuration
 #
-menuconfig TOUCHSCREEN_SYNAPTICS_DSX_LETV
-	bool "Synaptics DSX v2.6 touchscreen (LeTV)"
+menuconfig TOUCHSCREEN_SYNAPTICS_DSX_V26
+	bool "Synaptics DSX touchscreen"
+	default y
 	help
 	  Say Y here if you have a Synaptics DSX touchscreen connected
-	  to your LeTV/LeEco device.
+	  to your system.
 
-	  If unsure, say N. Otherwise, say Y.
+	  If unsure, say N.
 
-if TOUCHSCREEN_SYNAPTICS_DSX_LETV
+if TOUCHSCREEN_SYNAPTICS_DSX_V26
 
 choice
-	default TOUCHSCREEN_SYNAPTICS_DSX_I2C_LETV
-	prompt "Synaptics DSX v2.6 bus interface"
-config TOUCHSCREEN_SYNAPTICS_DSX_I2C_LETV
+	default TOUCHSCREEN_SYNAPTICS_DSX_I2C_V26
+	prompt "Synaptics DSX bus interface"
+config TOUCHSCREEN_SYNAPTICS_DSX_I2C_V26
 	bool "RMI over I2C"
 	depends on I2C
-config TOUCHSCREEN_SYNAPTICS_DSX_SPI_LETV
+config TOUCHSCREEN_SYNAPTICS_DSX_SPI_V26
 	bool "RMI over SPI"
 	depends on SPI_MASTER
-config TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C_LETV
+config TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C_V26
 	bool "HID over I2C"
 	depends on I2C
 endchoice
 
-config TOUCHSCREEN_SYNAPTICS_DSX_CORE_LETV
-	tristate "Synaptics DSX v2.6 core driver module"
+config TOUCHSCREEN_SYNAPTICS_DSX_CORE_V26
+	tristate "Synaptics DSX core driver module"
 	depends on I2C || SPI_MASTER
 	help
 	  Say Y here to enable basic touch reporting functionality.
@@ -36,20 +37,9 @@ config TOUCHSCREEN_SYNAPTICS_DSX_CORE_LETV
 	  To compile this driver as a module, choose M here: the
 	  module will be called synaptics_dsx_core.
 
-config TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_LETV
-	tristate "Synaptics DSX v2.6 RMI device module"
-	depends on TOUCHSCREEN_SYNAPTICS_DSX_CORE_LETV
-	help
-	  Say Y here to enable support for direct RMI register access.
-
-	  If unsure, say N.
-
-	  To compile this driver as a module, choose M here: the
-	  module will be called synaptics_dsx_rmi_dev.
-
-config TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_LETV
-	tristate "Synaptics DSX v2.6 firmware update module"
-	depends on TOUCHSCREEN_SYNAPTICS_DSX_CORE_LETV
+config TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_V26
+	tristate "Synaptics DSX firmware update module"
+	depends on TOUCHSCREEN_SYNAPTICS_DSX_CORE_V26
 	help
 	  Say Y here to enable support for doing firmware update.
 
@@ -58,9 +48,9 @@ config TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_LETV
 	  To compile this driver as a module, choose M here: the
 	  module will be called synaptics_dsx_fw_update.
 
-config TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING_LETV
-	tristate "Synaptics DSX v2.6 test reporting module"
-	depends on TOUCHSCREEN_SYNAPTICS_DSX_CORE_LETV
+config TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING_V26
+	tristate "Synaptics DSX test reporting module"
+	depends on TOUCHSCREEN_SYNAPTICS_DSX_CORE_V26
 	help
 	  Say Y here to enable support for retrieving production test reports.
 
@@ -69,20 +59,9 @@ config TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING_LETV
 	  To compile this driver as a module, choose M here: the
 	  module will be called synaptics_dsx_test_reporting.
 
-config TOUCHSCREEN_SYNAPTICS_DSX_PROXIMITY_LETV
-	tristate "Synaptics DSX v2.6 proximity module"
-	depends on TOUCHSCREEN_SYNAPTICS_DSX_CORE_LETV
-	help
-	  Say Y here to enable support for proximity functionality.
-
-	  If unsure, say N.
-
-	  To compile this driver as a module, choose M here: the
-	  module will be called synaptics_dsx_proximity.
-
-config TOUCHSCREEN_SYNAPTICS_DSX_ACTIVE_PEN_LETV
-	tristate "Synaptics DSX v2.6 active pen module"
-	depends on TOUCHSCREEN_SYNAPTICS_DSX_CORE_LETV
+config TOUCHSCREEN_SYNAPTICS_DSX_ACTIVE_PEN_V26
+	tristate "Synaptics DSX active pen module"
+	depends on TOUCHSCREEN_SYNAPTICS_DSX_CORE_V26
 	help
 	  Say Y here to enable support for active pen functionality.
 
@@ -91,9 +70,9 @@ config TOUCHSCREEN_SYNAPTICS_DSX_ACTIVE_PEN_LETV
 	  To compile this driver as a module, choose M here: the
 	  module will be called synaptics_dsx_active_pen.
 
-config TOUCHSCREEN_SYNAPTICS_DSX_GESTURE_LETV
-	tristate "Synaptics DSX v2.6 user defined gesture module"
-	depends on TOUCHSCREEN_SYNAPTICS_DSX_CORE_LETV
+config TOUCHSCREEN_SYNAPTICS_DSX_GESTURE_V26
+	tristate "Synaptics DSX user defined gesture module"
+	depends on TOUCHSCREEN_SYNAPTICS_DSX_CORE_V26
 	help
 	  Say Y here to enable support for user defined gesture functionality.
 
@@ -102,9 +81,9 @@ config TOUCHSCREEN_SYNAPTICS_DSX_GESTURE_LETV
 	  To compile this driver as a module, choose M here: the
 	  module will be called synaptics_dsx_gesture.
 
-config TOUCHSCREEN_SYNAPTICS_DSX_VIDEO_LETV
-	tristate "Synaptics DSX v2.6 video module"
-	depends on TOUCHSCREEN_SYNAPTICS_DSX_CORE_LETV
+config TOUCHSCREEN_SYNAPTICS_DSX_VIDEO_V26
+	tristate "Synaptics DSX video module"
+	depends on TOUCHSCREEN_SYNAPTICS_DSX_CORE_V26
 	help
 	  Say Y here to enable support for video communication functionality.
 
