--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -1,3 +1,4 @@
+
 #
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 3.18.105 Kernel Configuration
@@ -139,6 +140,7 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_MEMCG=y
+CONFIG_DYNAMIC_STUNE_BOOST=y
 CONFIG_MEMCG_SWAP=y
 CONFIG_MEMCG_SWAP_ENABLED=y
 # CONFIG_MEMCG_KMEM is not set
@@ -554,6 +556,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_CPU_FREQ_GOV_SCHED is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_PWRUTILX=y
 
 #
 # CPU frequency scaling drivers
@@ -599,6 +602,8 @@ CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
 CONFIG_INET=y
+CONFIG_WIREGUARD=y
+# CONFIG_WIREGUARD_DEBUG is not set
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 # CONFIG_IP_FIB_TRIE_STATS is not set
@@ -2385,6 +2390,7 @@ CONFIG_THERMAL_DEFAULT_GOV_STEP_WISE=y
 # CONFIG_THERMAL_DEFAULT_GOV_POWER_ALLOCATOR is not set
 # CONFIG_THERMAL_GOV_FAIR_SHARE is not set
 CONFIG_THERMAL_GOV_STEP_WISE=y
+CONFIG_THERMAL_MONITOR_SIMPLE=y
 # CONFIG_THERMAL_GOV_BANG_BANG is not set
 # CONFIG_THERMAL_GOV_USER_SPACE is not set
 # CONFIG_THERMAL_GOV_POWER_ALLOCATOR is not set
@@ -2393,7 +2399,7 @@ CONFIG_THERMAL_GOV_STEP_WISE=y
 CONFIG_THERMAL_TSENS8974=y
 CONFIG_LIMITS_MONITOR=y
 CONFIG_LIMITS_LITE_HW=y
-CONFIG_THERMAL_MONITOR=y
+# CONFIG_THERMAL_MONITOR is not set
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 
@@ -4511,3 +4517,6 @@ CONFIG_QMI_ENCDEC=y
 CONFIG_REGULATOR_CPR3_VOLTAGE_CONTROL=y
 CONFIG_FINGERPRINT_BOOST=y
 CONFIG_ADRENO_IDLER=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
