--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -1758,16 +1758,21 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_V26=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_V26=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_V26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C_V26 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_V26 is not set
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_V26=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_V26=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING_V26=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_ACTIVE_PEN_V26 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_GESTURE_V26 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_VIDEO_V26 is not set
 CONFIG_TOUCHSCREEN_HIDEEP_TP_LETV=y
 CONFIG_OF_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
 # CONFIG_TOUCHSCREEN_AD7879 is not set
 # CONFIG_TOUCHSCREEN_AR1021_I2C is not set
-# CONFIG_TOUCHSCREEN_ATMEL_MXT is not set
+CONFIG_TOUCHSCREEN_ATMEL_MXT=y
 CONFIG_TOUCHSCREEN_ATMEL_MXT_LETV=y
-# CONFIG_TOUCHSCREEN_ATMEL_MAXTOUCH_TS is not set
+CONFIG_TOUCHSCREEN_ATMEL_MAXTOUCH_TS=y
 # CONFIG_TOUCHSCREEN_AUO_PIXCIR is not set
 # CONFIG_TOUCHSCREEN_BU21013 is not set
 # CONFIG_TOUCHSCREEN_CY8CTMG110 is not set
@@ -1809,13 +1814,13 @@ CONFIG_TOUCHSCREEN_ATMEL_MXT_LETV=y
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_TOUCHSCREEN_GT9XX is not set
-# CONFIG_TOUCHSCREEN_FTS is not set
+CONFIG_TOUCHSCREEN_FTS=y
 # CONFIG_TOUCHSCREEN_MAXIM_STI is not set
 CONFIG_LETVS_CLASS=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
-# CONFIG_INPUT_HBTP_INPUT is not set
+CONFIG_INPUT_HBTP_INPUT=y
 # CONFIG_INPUT_MMA8450 is not set
 # CONFIG_INPUT_MPU3050 is not set
 # CONFIG_SENSORS_MPU6050 is not set
@@ -3882,7 +3887,7 @@ CONFIG_MSM_TZ_LOG=y
 #
 # Letv driver support
 #
-# CONFIG_DRV2604L_HAPTICS is not set
+CONFIG_DRV2604L_HAPTICS=y
 
 #
 # Firmware Drivers
