update thermal from infrag

--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -537,7 +537,7 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
-# CONFIG_CPU_FREQ_STAT_DETAILS is not set
+CONFIG_CPU_FREQ_STAT_DETAILS=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
@@ -558,7 +558,20 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 #
 # CPU frequency scaling drivers
 #
+CONFIG_CPU_FREQ_GOV_LIONFISH=y
+CONFIG_CPU_FREQ_GOV_DARKNESS=y
+CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
+CONFIG_CPU_FREQ_GOV_ALUCARD=y
+CONFIG_CPU_FREQ_GOV_DESPAIR=y
 # CONFIG_CPUFREQ_DT is not set
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
+CONFIG_CPU_BOOST=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+CONFIG_FINGERPRINT_BOOST=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -4496,3 +4509,4 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_STRICT_MEMORY_RWX is not set
 CONFIG_REGULATOR_CPR3_VOLTAGE_CONTROL=y
 CONFIG_FINGERPRINT_BOOST=y
+CONFIG_ADRENO_IDLER=y
