--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -93,7 +93,7 @@ CONFIG_HIGH_RES_TIMERS=y
 # CONFIG_TICK_CPU_ACCOUNTING is not set
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 CONFIG_IRQ_TIME_ACCOUNTING=y
-# CONFIG_SCHED_WALT is not set
+CONFIG_SCHED_WALT=y
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
 # CONFIG_TASK_DELAY_ACCT is not set
@@ -112,9 +112,9 @@ CONFIG_RCU_FANOUT=64
 CONFIG_RCU_FANOUT_LEAF=16
 # CONFIG_RCU_FANOUT_EXACT is not set
 CONFIG_RCU_FAST_NO_HZ=y
-# CONFIG_TREE_RCU_TRACE is not set
-# CONFIG_RCU_BOOST is not set
-# CONFIG_RCU_NOCB_CPU is not set
+CONFIG_RCU_BOOST=y
+CONFIG_RCU_NOCB_CPU=y
+CONFIG_RCU_NOCB_CPU_ALL=y
 CONFIG_BUILD_BIN2C=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
@@ -130,6 +130,7 @@ CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
+CONFIG_CGROUP_SCHEDTUNE=y
 # CONFIG_MEMCG is not set
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
@@ -137,7 +138,6 @@ CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_CFS_BANDWIDTH is not set
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
-CONFIG_SCHED_HMP=y
 # CONFIG_SCHED_HMP_CSTATE_AWARE is not set
 CONFIG_SCHED_CORE_CTL=y
 # CONFIG_SCHED_QHMP is not set
@@ -146,9 +146,12 @@ CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
+
 CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
-# CONFIG_SCHED_TUNE is not set
+CONFIG_SCHED_TUNE=y
+CONFIG_DYNAMIC_STUNE_BOOST=y
+CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
@@ -536,7 +539,6 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 #
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_COMMON=y
-CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_STAT_DETAILS=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
@@ -548,18 +550,11 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHED is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONFISH is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-# CONFIG_CPU_FREQ_GOV_SCHED is not set
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 
 #
 # CPU frequency scaling drivers
 #
-CONFIG_CPU_FREQ_GOV_LIONFISH=y
-CONFIG_CPU_FREQ_GOV_DARKNESS=y
 # CONFIG_CPUFREQ_DT is not set
 CONFIG_CPU_BOOST=y
 CONFIG_FINGERPRINT_BOOST=y
@@ -2222,7 +2217,6 @@ CONFIG_MSM_DLOAD_MODE=y
 # CONFIG_POWER_RESET_SYSCON is not set
 # CONFIG_POWER_AVS is not set
 CONFIG_MSM_PM=y
-CONFIG_APSS_CORE_EA=y
 CONFIG_MSM_APM=y
 CONFIG_MSM_IDLE_STATS=y
 CONFIG_MSM_IDLE_STATS_FIRST_BUCKET=62500
@@ -3790,6 +3784,7 @@ CONFIG_MSM_SECURE_BUFFER=y
 # CONFIG_MSM_BAM_DMUX is not set
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
+CONFIG_MSM_PERFORMANCE_CPUFREQ_LIMITS_VOTING_ONLY=y
 CONFIG_MSM_POWER=y
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 CONFIG_MSM_QBT1000=y
@@ -4145,7 +4140,6 @@ CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_PANIC_ON_OOPS_VALUE=0
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_PANIC_ON_RECURSIVE_FAULT=y
-CONFIG_SCHED_DEBUG=y
 # CONFIG_PANIC_ON_SCHED_BUG is not set
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
 CONFIG_SYSRQ_SCHED_DEBUG=y
