--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -549,6 +549,11 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHED is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONFISH is not set
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_PWRUTILX=y
@@ -559,6 +564,8 @@ CONFIG_CPU_FREQ_GOV_PWRUTILX=y
 # CONFIG_CPUFREQ_DT is not set
 CONFIG_CPU_BOOST=y
 CONFIG_FINGERPRINT_BOOST=y
+CONFIG_CPU_FREQ_GOV_LIONFISH=y
+CONFIG_CPU_FREQ_GOV_DARKNESS=y
 
 #
 # ARM CPU frequency scaling drivers
